# shallow_decoder_mbr

./: README.md  pyproject.toml
shallow_decoder_mbr/scripts/: example_marianmt.py  generate.py  process_wmt.sh  test.py  train.py  train_base_model.py  train_draft_model.py  try_nllb.py
